# TrapGaint

./: .gitignore  TestCursor.java  TestJar.java  TestLWJGL.java  TestLWJGL2.java  TestLWJGL2Crash.java  TestLWJGL2Flip.java  TestLWJGL2SetCursor.java  TestLWJGL2Sizes.java  TestLWJGL3.java  TestLWJGL4.java  TestMinecraft189Display.java  TestProperties.java  darwin-aarch64.json  darwin-x86_64.json  latest-simple.json  latest.json  launch-animation.html  mc_args.json  mc_args.txt  mc_cmd.sh  modpacks.json  package-lock.json  package.json  patch.java  test-framer.html  test-friends.js  test_svg.js  update-release.sh  version.txt  vite.config.ts
agent_build/: AgentLoader.java  DragonCursorAgent.java  DragonCursorAgent.java.bak  DragonPanoramaAgent.java  MANIFEST.MF  MANIFEST_PANORAMA.MF
agents/: GLFWErrorFilter.java
client/: index.html  (+4 more)
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: generate-black-dragon-icons-macos.sh  generate-black-dragon-icons.sh  generate-dragon-icons.sh  generate-icons.sh  generate-pink-icons.sh  icon.icns
src-tauri/installer/: generate-installer-images.sh  installer.nsh
src-tauri/resources/: libglfw-patched.dylib
src-tauri/src/: discord.rs  main.rs  main.rs.bak  server.rs
src-tauri/src/minecraft/: auth.rs  bedrock.rs  downloader.rs  dragon.rs  dragon_mod_installer.rs  dragon_updater.rs  dragonauth.rs  dragonskins.rs  dragonskins_installer.rs  fabric.rs  forge.rs  java_manager.rs  manifest.rs  mod.rs  mod_fix.rs  modpacks.rs  quilt.rs  server.rs  server_commands.rs  state.rs
(+143 files in other folders)
