[package]
name = "minecraft-launcher"
version = "3.0.0"
description = "A Minecraft Launcher"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-http = "2"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream", "blocking", "gzip"] }
sha1 = { version = "0.10", features = ["oid"] }
sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
zip = "0.6"
flate2 = "1.0"
tar = "0.4"
futures-util = "0.3"
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
discord-rich-presence = "0.2"
lazy_static = "1.4"
rand = "0.8"
rsa = "0.9"
md5 = "0.7"
regex = "1.10"
warp = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "gif"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
